--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+setuptools==0.7.3 
 appdirs==1.4.4
 asgiref==3.3.1
 astroid==2.4.2
@@ -21,7 +22,6 @@ Pillow==8.0.1
 psycopg2==2.8.6
 PyAudio @ file:///C:/Users/SKYNET/Downloads/PyAudio-0.2.11-cp39-cp39-win_amd64.whl
 pygame==2.0.0
-pylint==2.6.0
 pylint-django==2.3.0
 pylint-plugin-utils==0.6
 pypiwin32==223
